# codesurvey

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
analyzers/core/: index.html
analyzers/features/: index.html
analyzers/python/: index.html
codesurvey/: __init__.py  core.py  database.py  utils.py
codesurvey/analyzers/: __init__.py  core.py  features.py
codesurvey/analyzers/python/: __init__.py  core.py  features.py
codesurvey/sources/: __init__.py  core.py
core/: index.html
database/: index.html
docs/: core.md  database.md
docs/analyzers/: core.md  features.md  python.md
docs/sources/: core.md
examples/: add_note.py  basic.py
search/: search_index.json
sources/core/: index.html
stylesheets/: extra.css
tests/: test_codesurvey.py  test_utils.py
